--- a/manifest.json
+++ b/manifest.json
@@ -3,8 +3,8 @@
     "short_name": "Баоларм",
     "start_url": ".",
     "display": "standalone",
-    "background_color": "#1a365d",
-    "theme_color": "#2d3748",
+    "background_color": "#1e3c72",
+    "theme_color": "#2a5298",
     "icons": [
         {
             "src": "icon-192.png",
